# Dashboard

./: .gitignore  Dashboard.cabal  LICENSE  README.md
src/: Main.hs  Models.hs  Routes.hs
src/site/: README.md  bsconfig.json  package.json
src/site/src/: App.bs.js  App.re  Component2.re  Index.bs.js  Index.re
