name:                Dashboard
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/yevbar/Dashboard#readme
license:             BSD3
license-file:        LICENSE
author:              Yev Barkalov
maintainer:          yevbar1729@gmail.com
copyright:           2019 Yev Barkalov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Dashboard
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       scotty,
                       aeson,
                       wai,
                       wai-extra
